force-app/main/default/objects/Pickup__c/Pickup__c.object-meta.xml
<CustomObject>
    <description>Pickup table stores pickup requests data raised by customers.</description>
    <label>Pickup</label>
    <nameField>
        <displayFormat>PKUP-{000000}</displayFormat>
        <label>Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>