force-app/main/default/objects/Pickup__c/fields/ACR_NON_ACR__c.field-meta.xml
<CustomField>
    <fullName>ACR_NON_ACR__c</fullName>
    <label>ACR/NON-ACR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>