force-app/main/default/objects/Pickup__c/fields/Address_city__c.field-meta.xml
<CustomField>
    <fullName>Address_city__c</fullName>
    <formula>Shipper_Address__r.CITY__c</formula>
    <label>Address city</label>
    <type>Text</type>
</CustomField>