force-app/main/default/objects/Pickup__c/fields/Assigned_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date_and_Time__c</fullName>
    <label>Assigned Date and Time</label>
    <type>DateTime</type>
</CustomField>