force-app/main/default/objects/Pickup__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>