force-app/main/default/objects/Pickup__c/fields/Bot_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Bot_Phone_Number__c</fullName>
    <label>Bot Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>