force-app/main/default/objects/Pickup__c/fields/BVC_Origin_Hub__c.field-meta.xml
<CustomField>
    <fullName>BVC_Origin_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Origin Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Pickups</relationshipLabel>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>