force-app/main/default/objects/Pickup__c/fields/BVC_Service__c.field-meta.xml
<CustomField>
    <fullName>BVC_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Product_Category__c</field>
            <operation>equals</operation>
            <value>Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Pickups</relationshipLabel>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>