force-app/main/default/objects/Pickup__c/fields/ConsigneeAddressID__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeAddressID__c</fullName>
    <label>Consignee Address ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>