force-app/main/default/objects/Pickup__c/fields/Contact_Person_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Number__c</fullName>
    <label>Contact Person Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>