force-app/main/default/objects/Pickup__c/fields/created_date_time__c.field-meta.xml
<CustomField>
    <fullName>created_date_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>created date/time</label>
    <type>DateTime</type>
</CustomField>