force-app/main/default/objects/Pickup__c/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <formula>TEXT(Customer__r.Credit_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>