force-app/main/default/objects/Pickup__c/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <formula>TEXT (Customer__r.Customer_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Category</label>
    <type>Text</type>
</CustomField>