force-app/main/default/objects/Pickup__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Use to send pickup details to customer Phone No</description>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>