force-app/main/default/objects/Pickup__c/fields/Customer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Category__c</fullName>
    <label>BVC Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValSHIP</fullName>
            </value>
            <value>
                <fullName>GoldSHIP</fullName>
            </value>
            <value>
                <fullName>SilverSHIP</fullName>
            </value>
            <value>
                <fullName>LuxeSHIP</fullName>
            </value>
            <value>
                <fullName>GenSHIP</fullName>
            </value>
            <value>
                <fullName>ExhibiSHIP</fullName>
                <isActive>false</isActive>
                <label>ExhibiSHIP</label>
            </value>
            <value>
                <fullName>Gold Bars</fullName>
                <isActive>false</isActive>
                <label>Gold Bars</label>
            </value>
            <value>
                <fullName>Gold Coins</fullName>
                <isActive>false</isActive>
                <label>Gold Coins</label>
            </value>
            <value>
                <fullName>Gold Jewellery</fullName>
                <isActive>false</isActive>
                <label>Gold Jewellery</label>
            </value>
            <value>
                <fullName>Silver Bricks</fullName>
                <isActive>false</isActive>
                <label>Silver Bricks</label>
            </value>
            <value>
                <fullName>Silver Jewellery</fullName>
                <isActive>false</isActive>
                <label>Silver Jewellery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>