force-app/main/default/objects/Pickup__c/fields/CustomerPAN__c.field-meta.xml
<CustomField>
    <fullName>CustomerPAN__c</fullName>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>