force-app/main/default/objects/Pickup__c/fields/Destination_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_City__c</fullName>
    <formula>Destination_Address_Name__r.CITY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address City</label>
    <type>Text</type>
</CustomField>