force-app/main/default/objects/Pickup__c/fields/Destination_Address_Email__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Email__c</fullName>
    <formula>Destination_Address_Name__r.EMAIL_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Email</label>
    <type>Text</type>
</CustomField>