force-app/main/default/objects/Pickup__c/fields/Destination_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Address Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Pickups (Destination Address Name)</relationshipLabel>
    <relationshipName>Pickups3</relationshipName>
    <type>Lookup</type>
</CustomField>