force-app/main/default/objects/Pickup__c/fields/Destination_Address_Phone__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Phone__c</fullName>
    <formula>Destination_Address_Name__r.MOBILE1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Phone</label>
    <type>Text</type>
</CustomField>