force-app/main/default/objects/Pickup__c/fields/Destination_Address_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_Pincode__c</fullName>
    <formula>Destination_Address_Name__r.Pincode_TMS__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address Pincode</label>
    <type>Text</type>
</CustomField>