force-app/main/default/objects/Pickup__c/fields/Destination_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address_State__c</fullName>
    <formula>Destination_Address_Name__r.State_TMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Address State</label>
    <type>Text</type>
</CustomField>