force-app/main/default/objects/Pickup__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <label>Error Details</label>
    <type>TextArea</type>
</CustomField>