force-app/main/default/objects/Pickup__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <formula>IF( AND(DATEVALUE(CreatedDate) &gt; DATE(YEAR(DATEVALUE(CreatedDate)),04,01), DATEVALUE(CreatedDate) &lt; DATE(YEAR(DATEVALUE(CreatedDate))+1 ,03,31)), RIGHT(Text(YEAR( DATEVALUE(CreatedDate))), 2) + RIGHT(Text(YEAR( DATEVALUE( CreatedDate))+1), 2) , RIGHT(Text(YEAR(DATEVALUE( CreatedDate))-1), 2) + RIGHT(Text(YEAR(DATEVALUE( CreatedDate))), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>