force-app/main/default/objects/Pickup__c/fields/Insurance_By__c.field-meta.xml
<CustomField>
    <fullName>Insurance_By__c</fullName>
    <label>Insurance By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>