force-app/main/default/objects/Pickup__c/fields/Invoice_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ref_No__c</fullName>
    <label>Invoice Ref No</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>