force-app/main/default/objects/Pickup__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <label>Net Weight</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>