force-app/main/default/objects/Pickup__c/fields/Net_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_UOM__c</fullName>
    <label>Net Weight UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>