force-app/main/default/objects/Pickup__c/fields/No_Of_Parcels__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Parcels__c</fullName>
    <label>No Of Parcels</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>