force-app/main/default/objects/Pickup__c/fields/Notify_Hub_Origin__c.field-meta.xml
<CustomField>
    <fullName>Notify_Hub_Origin__c</fullName>
    <description>Notify Hub Origin As Pickup Has Been Created.</description>
    <label>Notify Hub Origin</label>
    <type>Email</type>
</CustomField>