force-app/main/default/objects/Pickup__c/fields/Number_of_Shipments_Picked_Up__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shipments_Picked_Up__c</fullName>
    <label>Number of Shipments Picked Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>