force-app/main/default/objects/Pickup__c/fields/Number_of_Times_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Rescheduled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Times Rescheduled</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>