force-app/main/default/objects/Pickup__c/fields/Origin_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Country__c</fullName>
    <formula>Shipper_Address__r.Country_TMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Country</label>
    <type>Text</type>
</CustomField>