force-app/main/default/objects/Pickup__c/fields/Origin_Address_Email__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Email__c</fullName>
    <formula>Shipper_Address__r.EMAIL_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Email</label>
    <type>Text</type>
</CustomField>