force-app/main/default/objects/Pickup__c/fields/Origin_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Line1__c</fullName>
    <formula>Shipper_Address__r.ADDRESS1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Line1</label>
    <type>Text</type>
</CustomField>