force-app/main/default/objects/Pickup__c/fields/Origin_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Line2__c</fullName>
    <formula>Shipper_Address__r.ADDRESS2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Line2</label>
    <type>Text</type>
</CustomField>