force-app/main/default/objects/Pickup__c/fields/Origin_Address_Person__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Person__c</fullName>
    <formula>Shipper_Address__r.People__r.FirstName  +&apos; &apos;+ Shipper_Address__r.People__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Person</label>
    <type>Text</type>
</CustomField>