force-app/main/default/objects/Pickup__c/fields/Origin_Address_Phone__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Phone__c</fullName>
    <formula>Shipper_Address__r.MOBILE1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Phone</label>
    <type>Text</type>
</CustomField>