force-app/main/default/objects/Pickup__c/fields/Origin_Address_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_Pincode__c</fullName>
    <formula>Shipper_Address__r.PINCODE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address Pincode</label>
    <type>Text</type>
</CustomField>