force-app/main/default/objects/Pickup__c/fields/Origin_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address_State__c</fullName>
    <formula>Shipper_Address__r.STATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Address State</label>
    <type>Text</type>
</CustomField>