force-app/main/default/objects/Pickup__c/fields/Origin_Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Origin_Phone_Country_Code__c</fullName>
    <formula>Shipper_Address__r.COUNTRY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper Phone Country Code</label>
    <type>Text</type>
</CustomField>