force-app/main/default/objects/Pickup__c/fields/OTP_Verified__c.field-meta.xml
<CustomField>
    <fullName>OTP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag</description>
    <label>OTP Verified</label>
    <type>Checkbox</type>
</CustomField>