force-app/main/default/objects/Pickup__c/fields/Physical_Pickup_Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Physical_Pickup_Completed_Time__c</fullName>
    <label>Physical Pickup Completed Time</label>
    <type>DateTime</type>
</CustomField>