force-app/main/default/objects/Pickup__c/fields/Pickedup_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickedup_Time__c</fullName>
    <label>Pickup Time</label>
    <type>Time</type>
</CustomField>