force-app/main/default/objects/Pickup__c/fields/Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AddressBook__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Pickups</relationshipLabel>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>