force-app/main/default/objects/Pickup__c/fields/Pickup_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Assigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Assigned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups1</relationshipName>
    <type>Lookup</type>
</CustomField>