force-app/main/default/objects/Pickup__c/fields/Pickup_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups3</relationshipName>
    <type>Lookup</type>
</CustomField>