force-app/main/default/objects/Pickup__c/fields/Pickup_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Cancelled__c</fullName>
    <label>Pickup Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>