force-app/main/default/objects/Pickup__c/fields/Pickup_Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Cancelled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Cancelled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups4</relationshipName>
    <type>Lookup</type>
</CustomField>