force-app/main/default/objects/Pickup__c/fields/Pickup_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Cancelled_Reason__c</fullName>
    <label>Pickup Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Pickup</fullName>
            </value>
            <value>
                <fullName>Customer Declined Pickup</fullName>
            </value>
            <value>
                <fullName>Tech Issues</fullName>
            </value>
            <value>
                <fullName>Operational Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>