force-app/main/default/objects/Pickup__c/fields/Pickup_City__c.field-meta.xml
<CustomField>
    <fullName>Pickup_City__c</fullName>
    <formula>Shipper_Address__r.City_TMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup City</label>
    <type>Text</type>
</CustomField>