force-app/main/default/objects/Pickup__c/fields/Pickup_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>