force-app/main/default/objects/Pickup__c/fields/Pickup_Created_Through__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Created_Through__c</fullName>
    <label>Pickup Created Through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Operations Team</fullName>
                <default>true</default>
                <label>Operations Team</label>
            </value>
            <value>
                <fullName>Other BVC User</fullName>
                <isActive>false</isActive>
                <label>Other BVC User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>