force-app/main/default/objects/Pickup__c/fields/Pickup_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_and_Time__c</fullName>
    <label>Pickup Date and Time</label>
    <type>DateTime</type>
</CustomField>