force-app/main/default/objects/Pickup__c/fields/Pickup_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Expiry_date__c</fullName>
    <label>Pickup Expiry date</label>
    <type>Date</type>
</CustomField>