force-app/main/default/objects/Pickup__c/fields/Pickup_Id__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Id__c</fullName>
    <formula>&apos;PRS/&apos;+Zone_Code__c+&apos;/&apos;+Financial_Year__c+&apos;/&apos;+TEXT(Pickup_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Id</label>
    <type>Text</type>
</CustomField>