force-app/main/default/objects/Pickup__c/fields/Pickup_Number__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Number__c</fullName>
    <label>Pickup Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>