force-app/main/default/objects/Pickup__c/fields/Pickup_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Pincode__c</fullName>
    <formula>Shipper_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Pincode</label>
    <type>Text</type>
</CustomField>