force-app/main/default/objects/Pickup__c/fields/Pickup_Reassigned_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Reassigned_Time__c</fullName>
    <label>Pickup Reassigned Time</label>
    <type>DateTime</type>
</CustomField>