force-app/main/default/objects/Pickup__c/fields/Pickup_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Registration_No__c</fullName>
    <displayFormat>PRN{00000}</displayFormat>
    <label>Pickup Registration No</label>
    <type>AutoNumber</type>
</CustomField>