force-app/main/default/objects/Pickup__c/fields/Pickup_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Representative_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Representative Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups5</relationshipName>
    <type>Lookup</type>
</CustomField>