force-app/main/default/objects/Pickup__c/fields/Pickup_Request_Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Request_Creation_Time__c</fullName>
    <label>Pickup Request Creation Time</label>
    <type>DateTime</type>
</CustomField>