force-app/main/default/objects/Pickup__c/fields/Pickup_Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Route_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Route Number</label>
    <referenceTo>Pickup_Delivery_Route__c</referenceTo>
    <relationshipLabel>Pickups</relationshipLabel>
    <relationshipName>Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>