force-app/main/default/objects/Pickup__c/fields/Pickup_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Status__c</fullName>
    <label>Pickup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completd</fullName>
                <isActive>false</isActive>
                <label>Completd</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pickup In Progress</fullName>
                <isActive>false</isActive>
                <label>Pickup In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>