force-app/main/default/objects/Pickup__c/fields/Pickup_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pickups2</relationshipName>
    <type>Lookup</type>
</CustomField>