force-app/main/default/objects/Pickup__c/fields/Pickup_TAT__c.field-meta.xml
<CustomField>
    <fullName>Pickup_TAT__c</fullName>
    <formula>Pickup_Date_and_Time__c -  created_date_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup-TAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>