force-app/main/default/objects/Pickup__c/fields/Pickup_TAT_Mins__c.field-meta.xml
<CustomField>
    <fullName>Pickup_TAT_Mins__c</fullName>
    <formula>Pickup_TAT__c  * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup-TAT(Mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>