force-app/main/default/objects/Pickup__c/fields/Pickup_Time_Number__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time_Number__c</fullName>
    <formula>VALUE(TEXT (TIMEVALUE( Pickup_Date_and_Time__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Time(Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>