force-app/main/default/objects/Pickup__c/fields/Pickup_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time_Slot__c</fullName>
    <label>Pickup Time Slot</label>
    <type>DateTime</type>
</CustomField>