force-app/main/default/objects/Pickup__c/fields/Pickup_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Time_Text__c</fullName>
    <formula>TIMEVALUE( Pickup_Date_and_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Time(Text)</label>
    <type>Time</type>
</CustomField>