force-app/main/default/objects/Pickup__c/fields/Primary_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Email__c</fullName>
    <description>Used for Sending email with pickup details to customer email.</description>
    <label>Primary Customer Email</label>
    <type>Email</type>
</CustomField>