force-app/main/default/objects/Pickup__c/fields/Reason_for_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Reschedule__c</fullName>
    <label>Reason for Reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reschedule_Pickup__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Operational Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>