force-app/main/default/objects/Pickup__c/fields/Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_No__c</fullName>
    <label>Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>